[project]
name = "uvicorn-practice"
version = "0.1.0"
description = ""
authors = [
    {name = "Urwah Sajjad",email = "usajjad@hotmail.co.uk"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "uvicorn (>=0.34.2,<0.35.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
